# glibc_rust

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  EXISTING_GLIBC_STRUCTURE.md  FEATURE_PARITY.md  PLAN_TO_PORT_GLIBC_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  stub_census.json  support_matrix.json
crates/frankenlibc/: Cargo.toml
crates/frankenlibc-abi/: Cargo.toml  build.rs
crates/frankenlibc-abi/src/: ctype_abi.rs  dirent_abi.rs  dlfcn_abi.rs  errno_abi.rs  grp_abi.rs  iconv_abi.rs  inet_abi.rs  io_abi.rs  lib.rs  locale_abi.rs  macros.rs  malloc_abi.rs  math_abi.rs  mmap_abi.rs  poll_abi.rs  process_abi.rs  pthread_abi.rs  pwd_abi.rs  resolv_abi.rs  resource_abi.rs  runtime_policy.rs  signal_abi.rs  socket_abi.rs  startup_abi.rs  stdio_abi.rs  stdlib_abi.rs  string_abi.rs  termios_abi.rs  time_abi.rs  unistd_abi.rs  util.rs  wchar_abi.rs
crates/frankenlibc-abi/tests/: nss_cache_policy_test.rs  pthread_mutex_core_test.rs  pthread_rwlock_core_test.rs  startup_abi_contract_test.rs
crates/frankenlibc-abi/version_scripts/: libc.map
crates/frankenlibc-bench/: Cargo.toml
crates/frankenlibc-bench/benches/: membrane_bench.rs  runtime_math_bench.rs  runtime_math_kernels_bench.rs  stdio_bench.rs  string_bench.rs
crates/frankenlibc-bench/src/: lib.rs
crates/frankenlibc-fuzz/: Cargo.toml
crates/frankenlibc-fuzz/fuzz_targets/: fuzz_malloc.rs  fuzz_string.rs
crates/frankenlibc-harness/: Cargo.toml
crates/frankenlibc-harness/src/: asupersync_orchestrator.rs  conformance_matrix.rs  evidence_compliance.rs  evidence_decode.rs  fixtures.rs  healing_oracle.rs  kernel_regression_report.rs  kernel_snapshot.rs  lib.rs  runner.rs  runtime_math_determinism_proofs.rs  runtime_math_linkage_proofs.rs  structured_log.rs  verify.rs
crates/frankenlibc-harness/tests/: anytime_valid_monitor_test.rs  bd15n2_fixture_gap_fill_artifacts_test.rs  bd1f35_thread_stress_artifacts_test.rs  bd1qy_mutex_fixture_artifacts_test.rs  c_fixture_suite_test.rs  callthrough_census_test.rs  changepoint_drift_test.rs  claim_reconciliation_test.rs  closure_contract_test.rs  closure_gate_test.rs  closure_sweep_test.rs  conformance_coverage_gate_test.rs  conformance_fixture_pipeline_test.rs  conformance_fixture_unit_tests_test.rs  conformance_matrix_test.rs  controller_ablation_test.rs  crash_bundle_test.rs  cross_report_consistency_test.rs  cve_corpus_normalization_test.rs  cve_format_string_validation_test.rs  cve_hardened_assertions_test.rs  cve_heap_overflow_validation_test.rs  cve_integer_overflow_validation_test.rs  cve_paired_mode_runner_test.rs  cve_uaf_validation_test.rs  docs_env_mismatch_test.rs  e2e_suite_test.rs  evidence_compliance_test.rs  fuzz_harness_architecture_test.rs  fuzz_membrane_validation_test.rs  fuzz_phase1_targets_test.rs  hard_parts_dependency_matrix_test.rs  hard_parts_e2e_test.rs  hardened_repair_deny_matrix_test.rs  iconv_codec_scope_ledger_test.rs  isomorphism_proof_test.rs  math_governance_test.rs  math_production_set_policy_test.rs  math_retirement_test.rs  math_value_ablations_test.rs  (+42 more)
crates/frankenlibc-membrane/: Cargo.toml
crates/frankenlibc-membrane/src/: arena.rs  bloom.rs  check_oracle.rs  config.rs  fingerprint.rs  galois.rs  heal.rs  hji_reachability.rs  large_deviations.rs  lib.rs  mean_field_game.rs  metrics.rs  padic_valuation.rs  page_oracle.rs  persistence.rs  ptr_validator.rs  risk_engine.rs  rough_path.rs  schrodinger_bridge.rs  spectral_monitor.rs  tropical_latency.rs
crates/frankenlibc-membrane/src/runtime_math/: CONTROLLER_REGISTRATION.md  alpha_investing.rs  approachability_design.md  atiyah_bott.rs  bandit.rs  borel_cantelli.rs  changepoint.rs  clifford.rs  commitment_audit.rs  conformal.rs  controller_registration_guidelines.md  coupling.rs  covering_array.rs  cvar.rs  derived_tstructure.rs  design.rs  doob_decomposition.rs  entropy_rate.rs  eprocess.rs  evidence.rs  evidence_symbol_record_format.md  fano_bound.rs  fusion.rs  grobner_normal_form_design.md  grobner_normalizer.rs  grothendieck_glue.rs  higher_topos.rs  hodge_decomposition.rs  ito_quadratic_variation.rs  kernel_mmd.rs  ktheory.rs  microlocal.rs  (+19 more)
crates/frankenlibc-membrane/tests/: allocator_membrane_invariants_sequences_test.rs  fragmentation_storms_test.rs
crates/frankenlibc/benches/: membrane_copy.rs
crates/frankenlibc/src/: lib.rs
crates/frankenlibc_conformance/: Cargo.toml
crates/frankenlibc_conformance/src/: lib.rs  main.rs
crates/glibc-rs-abi/: Cargo.toml  build.rs
crates/glibc-rs-abi/src/: ctype_abi.rs  dirent_abi.rs  dlfcn_abi.rs  errno_abi.rs  iconv_abi.rs  inet_abi.rs  io_abi.rs  lib.rs  locale_abi.rs  macros.rs  malloc_abi.rs  math_abi.rs  membrane_state.rs  pthread_abi.rs  resolv_abi.rs  resource_abi.rs  runtime_policy.rs  setjmp_abi.rs  signal_abi.rs  socket_abi.rs  startup_abi.rs  startup_helpers.rs  stdio_abi.rs  stdlib_abi.rs  string_abi.rs  termios_abi.rs  time_abi.rs  unistd_abi.rs
crates/glibc-rs-abi/tests/: pthread_mutex_core_test.rs
crates/glibc-rs-abi/version_scripts/: libc.map
crates/glibc-rs-bench/: Cargo.toml
crates/glibc-rs-bench/benches/: malloc_bench.rs  membrane_bench.rs  runtime_math_bench.rs  runtime_math_kernels_bench.rs  string_bench.rs
crates/glibc-rs-harness/: Cargo.toml
crates/glibc-rs-harness/src/: capture.rs  diff.rs  evidence_decode.rs  evidence_decode_render.rs  kernel_regression_report.rs  kernel_snapshot.rs  lib.rs  membrane_tests.rs  report.rs  runner.rs  snapshot_diff.rs  structured_log.rs  traceability.rs
crates/glibc-rs-harness/tests/: c_fixture_suite_test.rs  closure_gate_test.rs  crash_bundle_test.rs  e2e_suite_test.rs  math_retirement_test.rs  matrix_dashboard_test.rs  matrix_drift_test.rs  mode_semantics_test.rs  one_lever_discipline_test.rs  packaging_test.rs  parity_report_drift_test.rs  perf_budget_test.rs  replacement_levels_test.rs  stub_contract_test.rs  verification_matrix_test.rs
crates/glibc-rs-membrane/: Cargo.toml
crates/glibc-rs-membrane/src/: arena.rs  config.rs  heal.rs  lattice.rs  lib.rs  page_oracle.rs  ptr_validator.rs  quarantine_controller.rs  symplectic_reduction.rs  tls_cache.rs
(+527 files in other folders)
