[workspace]
resolver = "2"
members = [
  "crates/glibc-rs-membrane",
  "crates/glibc-rs-core",
  "crates/glibc-rs-abi",
  "crates/glibc-rs-harness",
  "crates/glibc-rs-bench",
  # Legacy crates (kept for migration compatibility)
  "crates/glibc_rust",
  "crates/glibc_rust_conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.dependencies]
parking_lot = "0.12"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
libc = "0.2"

# Internal crates
glibc-rs-membrane = { path = "crates/glibc-rs-membrane" }
glibc-rs-core = { path = "crates/glibc-rs-core" }
glibc-rs-abi = { path = "crates/glibc-rs-abi" }

# Companion crates (build tooling only)
asupersync-conformance = { path = "/dp/asupersync/conformance" }
ftui-harness = { path = "/dp/frankentui/crates/ftui-harness" }
