[workspace]
resolver = "2"
members = [
  "crates/frankenlibc-membrane",
  "crates/frankenlibc-core",
  "crates/frankenlibc-abi",
  "crates/frankenlibc-harness",
  "crates/frankenlibc-bench",
  # Legacy crates (kept for migration compatibility)
  "crates/frankenlibc",
  "crates/frankenlibc_conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.dependencies]
parking_lot = "0.12"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
libc = "0.2"

# Internal crates
frankenlibc-membrane = { path = "crates/frankenlibc-membrane" }
frankenlibc-core = { path = "crates/frankenlibc-core" }
frankenlibc-abi = { path = "crates/frankenlibc-abi" }

# Companion crates (build tooling only)
asupersync-conformance = { path = "/dp/asupersync/conformance" }
ftui-harness = { path = "/dp/frankentui/crates/ftui-harness" }
