[package]
name = "frankenlibc-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ABI-compatible extern C boundary for FrankenLibC (produces libc.so)"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "allow"

[dependencies]
frankenlibc-membrane = { workspace = true }
frankenlibc-core = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
