[package]
name = "frankenlibc-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmarks for FrankenLibC"

[lints.rust]
unsafe_code = "allow"

[dependencies]
frankenlibc-membrane = { workspace = true }
frankenlibc-core = { workspace = true }
frankenlibc-abi = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
libc = { workspace = true }

[[bench]]
name = "string_bench"
harness = false

[[bench]]
name = "malloc_bench"
harness = false

[[bench]]
name = "membrane_bench"
harness = false

[[bench]]
name = "runtime_math_bench"
harness = false

[[bench]]
name = "runtime_math_kernels_bench"
harness = false

[[bench]]
name = "stdio_bench"
harness = false
