[package]
name = "frankenlibc-membrane"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transparent Safety Membrane for FrankenLibC"

[features]
default = ["runtime-math-production"]
runtime-math-production = []
runtime-math-research = ["runtime-math-production"]

[dependencies]
parking_lot = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }
