[package]
name = "frankenlibc_conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["asupersync-tooling"]
asupersync-tooling = ["dep:asupersync_conformance"]
frankentui-ui = ["dep:ftui_harness"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
libc = "0.2"
frankenlibc = { path = "../frankenlibc" }
frankenlibc-core = { path = "../frankenlibc-core" }
asupersync_conformance = { package = "asupersync-conformance", version = "0.2.0", path = "/dp/asupersync/conformance", optional = true }
ftui_harness = { package = "ftui-harness", version = "0.2.0", path = "/dp/frankentui/crates/ftui-harness", optional = true }
