[package]
name = "glibc-rs-membrane"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transparent Safety Membrane for glibc_rust"

[features]
default = ["runtime-math-production"]
runtime-math-production = []
runtime-math-research = ["runtime-math-production"]

[dependencies]
parking_lot = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
